Some more QOL, calendar imp. and start of dashboard imp.